[metadata]
name = certbot-dns-vultr
version = 1.0.0
description = Vultr DNS authenticator plugin for Certbot
url = https://github.com/undecidabot/certbot-dns-vultr
author = Matt
author_email = undecidabot@gmail.com
license = Zlib
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: System Administrators
    License :: OSI Approved :: zlib/libpng License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
py_modules =
    certbot_dns_vultr
python_requires = >=3.6
install_requires =
  certbot
  requests
  zope.interface

[options.entry_points]
certbot.plugins =
    dns-vultr = certbot_dns_vultr:Authenticator
